# twibot

./: .gitignore  .gitmodules  README.md  Readme.md  game.py  image.py  main.cpp  main.py  mov2mp4.py  requirements.txt  utils.py
classification/: generate_text_train_val.py  model.py  transforms_visualisation.ipynb
legacy/classification/: dataset.py  train.py
legacy/exploration/: sift.py  spread_cards.py
legacy/notebooks/: angle.ipynb  colors.ipynb  main.ipynb  otsu.ipynb  sift.ipynb  similarity_matrix.ipynb  video.ipynb
legacy/notebooks/.ipynb_checkpoints/: sift-checkpoint.ipynb
legacy/siamese/: dataset.py  generate_train_val_pairs.py  model.py
notebooks/: ann.txt  calibration.ipynb  create_yolo_annotation.ipynb  hought.ipynb  hsv-hsl.ipynb  hsv.ipynb  test-yolo.ipynb  video.ipynb
siamese/: loss.py  train.py
twibotcpp/: CMakeLists.txt  loadTensor.cpp  loadTensor.h  main.cpp  utils.cpp  utils.h
twibotcpp/data/: card.names
twibotcpp/include/: detector.h
twibotcpp/src/: main.cpp
